# Crawlagent

./: .env.example  .env.example.backup  .gitignore  ARCHITECTURE_IMPROVEMENTS.txt  CODEBASE_ANALYSIS_REPORT.md  DEMO_GUIDE.md  DEMO_STRATEGY.md  DEVELOPER_CONTEXT.md  DEVELOPMENT_SUMMARY.md  Dockerfile  FINAL_CHECKLIST.md  Makefile  NEXT_SESSION_TODO.md  PHASE1_TEST_REPORT.md  POC_SUCCESS_REPORT.md  PROJECT_CLEANUP_SUMMARY.md  PROJECT_COMPLETION_PRD.md  README.md  UC1_COMPARISON_RESULTS.txt  docker-compose.yml  langgraph.json  pyproject.toml  pytest.ini  scrapy.cfg  test_gpt_proposer_mvp.py  test_uc3_llm_verification.py
.claude/skills/: incremental-crawling.md  scheduler.md  test-uc2-flow.md  uc1-prompt-tuning.md  uc3-new-site-discovery.md  validate-crawl-quality.md
HANDOFF_PACKAGE/: 01_EXECUTIVE_SUMMARY.md  03_PRESENTATION_SLIDES_V2.md  05_ARCHITECTURE_EXPLANATION.md  08_DEPLOYMENT_GUIDE.md  09_TROUBLESHOOTING_REFERENCE.md  10_DEMO_REHEARSAL_CHECKLIST.md  CLAUDE_PPT_PROMPT.md  README.md
archived/: README.md
archived/claude_skills/: uc2-development.md
docs/: AI_WORKFLOW_ARCHITECTURE.md  CLAUDE_SKILLS_INTEGRATION.md  DEMO_SCENARIOS.md  FINAL_VALIDATION_REPORT.md  HANDOFF_CHECKLIST.md  PHASE3_COMPLETION_SUMMARY.md  PHASE_A_VALIDATION_REPORT.md  PRD.md  PRD_CrawlAgent_2025-11-06.md  PRD_NewsFlow_Personal_Project.md  PRESENTATION_SLIDES.md  PRODUCTION_READINESS.md  PROJECT_ANALYSIS_AND_HANDOFF.md  PROJECT_CLEANUP_ANALYSIS.md  README.md  ROI_ANALYSIS.md  SKILL_INTEGRATED.md  TEST_COVERAGE_IMPROVEMENT.md  UC2_EXPLANATION.md  UC2_Implementation_Plan.md  USER_EXPERIENCE_GUIDE.md  langgraph_architecture_explanation.md  langsmith_setup_guide.md  ppt_notes.md  ppt_troubleshooting_notes.md
scripts/: add_jsonb_indexes.py  add_naver_bbc_selectors.py  analyze_html.py  check_crawl_results.py  demo_presentation.py  demo_uc2_damage_yonhap.py  demo_uc3_reset_donga.py  diagnose_daum.py  expand_schema.py  fetch_html_for_studio.py  find_bbc_article.py  find_naver_body.py  generate_presentation.py  generate_workflow_diagrams.py  handoff_verification.sh  init_db.sql  migrate_cost_metrics.py  prepare_demo_urls.py  production_readiness_validation.py  quick_demo_test.py  reset_selector_demo.py  restore_yna_selector.py  retest_verified_urls.py  seed_demo_data.py  test_50_urls.py  test_claude_uc3.py  test_dom.py  test_gemini_backup_key.py  test_jtbc_jsonld.py  test_live_demo.py  test_master_graph_standalone.py  test_master_workflow.py  test_meta_extractor.py  test_phase1_improvements.py  test_phase1_urls.py  test_uc1_fix.py  test_uc1_integration.py  uc2_strong_damage.py  uc_test_cycle.sh  validate_improvements.py  (+7 more)
src/: config.py  exceptions.py
src/api/: auth.py  (+2 more)
tests/: conftest.py  test_cost_dashboard.py  test_cost_tracker.py  test_e2e_gradio_integration.py  test_gradio_ui.py  test_healthcheck.py  test_human_review_ui.py  test_langsmith_tracing.py  test_site_detector.py  test_uc1_comparison.py  test_uc1_uc2_integration.py  test_uc2.py  test_uc2_improved_consensus.py  test_uc3.py  test_uc3_new_site.py
(+121 files in other folders)
