[project]
name = "crawlagent"
version = "1.0.0"
description = "LangGraph Multi-Agent Self-Healing Web Crawler"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scrapy>=2.11.0",
    "trafilatura>=1.12.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pytest>=7.4.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "gradio>=4.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v -s"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "langgraph-cli (>=0.4.5,<0.5.0)"
]
